images can be too big in edit, so fixed it

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -733,6 +733,7 @@ article#edit, article#new {
         margin-left: auto;
         margin-bottom: 10px;
         display: block;
+        max-width: 100%; 
     }
     .field_with_errors {
         display: inline-block; 
